use queue to return action to main thread